[build-system]
requires = [ "setuptools>=61.2",]
build-backend = "setuptools.build_meta"

[project]
name = "itslivetools"
version = "0.1.0"
description = "Python tools and notebooks for interacting with ITS_LIVE velocity fields."
keywords = [ "glaciology", "ice", "ice sheet", "glacier", "velocity", "dynamics","geospatial", "satellite"]
classifiers = [ "Intended Audience :: Science/Research", "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Topic :: Scientific/Engineering", "Topic :: Scientific/Engineering :: GIS", "Topic :: Scientific/Engineering :: Image Processing",]
requires-python = ">=3.10"
dependencies = ["rioxarray", "xarray", "geopandas", "zarr", "shapely"]

[[project.authors]]
name = "Tom Chudley"
email = "thomas.r.chudley@durham.ac.uk"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/trchudley/itslivetools"
Repository = "https://github.com/trchudley/itslivetools"
Issues = "https://github.com/trchudley/itslivetools/issues"

[tool.setuptools.packages.find]
where = ["src"]
